[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Intro/IntroBlack.png" type="Texture" id=1]
[ext_resource path="res://assets/Misc/Controls.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/UI/TalkNotice.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/UI/Notice.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/UI/ChargeUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/UI/InteractNotice.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Misc/ControlsScreen.gd" type="Script" id=7]
[ext_resource path="res://assets/Audio/cursLo.wav" type="AudioStream" id=8]

[node name="ControlsScreen" type="Node"]
script = ExtResource( 7 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="ControlsDisplay" type="Node" parent="."]

[node name="Controls" parent="ControlsDisplay" instance=ExtResource( 2 )]
margin_left = 16.0
margin_top = 40.0
margin_right = 121.0
margin_bottom = 133.0

[node name="Information" parent="ControlsDisplay" instance=ExtResource( 2 )]
margin_left = 151.508
margin_top = 39.2128
margin_right = 287.508
margin_bottom = 140.213
text = "object is interactable :

object is examinable:

Hold down the attack button to charge attacks."
align = 2
autowrap = true

[node name="StartMessage" parent="ControlsDisplay" instance=ExtResource( 2 )]
visible = false
margin_left = 0.0
margin_top = 152.0
margin_right = 320.0
margin_bottom = 165.0
text = "press [SPACEBAR] to continue."
align = 1

[node name="InteractNotice" parent="ControlsDisplay" instance=ExtResource( 6 )]
position = Vector2( 278.79, 41.5056 )

[node name="TalkNotice" parent="ControlsDisplay" instance=ExtResource( 3 )]
position = Vector2( 283.926, 59.3959 )

[node name="Notice" parent="ControlsDisplay" instance=ExtResource( 4 )]
position = Vector2( 290.828, 102.961 )

[node name="ChargeUI" parent="ControlsDisplay" instance=ExtResource( 5 )]
position = Vector2( 320, 133.221 )
script = null

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
